# vk_parser

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml  rabbitmq.conf  test
.github/workflows/: check.yml  release.yml
docs/: architecture.puml  db.puml
test_info/: accounts.txt  messages.txt  test.py
vk_parser/admin/: __main__.py  arguments.py  celery.py  deps.py  message_sender.py  service.py  tasks.py
vk_parser/admin/handlers/: add_messages_to_db.py  add_users_to_db.py  base.py  change_role.py  delete_account.py  delete_accounts_db.py  delete_messages_db.py  delete_parser.py  delete_user_from_parser.py  logout_user.py  parser_request_create.py  parser_request_detail.py  parser_request_list.py  parser_request_send_messages.py  ping.py  send_messages.py
vk_parser/admin/templates/: base.html.j2  index.html.j2
vk_parser/clients/: vk.py
vk_parser/clients/base/: client.py  exceptions.py  handlers.py  root_handler.py
vk_parser/db/: __main__.py  alembic.ini  utils.py
vk_parser/db/migrations/: env.py
vk_parser/db/models/: __init__.py  auth.py  base.py  message_send_request.py  parser_request.py  send_message.py  vk_group.py  vk_group_post.py  vk_group_user.py  vk_messages.py  vk_send_messages.py  vk_user_messanger.py
vk_parser/generals/: enums.py  exceptions.py
vk_parser/generals/models/: amqp.py  auth.py  pagination.py  parser_request.py  send_message.py  vk_group.py  vk_group_post.py  vk_group_request.py  vk_group_user.py  vk_messages.py  vk_user_messanger.py
vk_parser/handlers/: base.py  parser_request_create.py  parser_request_detail.py  parser_request_list.py  ping.py
vk_parser/parsers/: base.py  vk.py
vk_parser/parsers/vk/: __main__.py  arguments.py  deps.py  parser.py  parsers.py  (+1 more)
vk_parser/rest/: __main__.py  service.py
vk_parser/services/: async_operations.py  rest.py  vk_parser.py
vk_parser/storages/: authorization.py  base.py  parser_request.py  ping.py  vk.py
vk_parser/tasks/: __init__.py  deleting_archive_accounts_task.py  deleting_old_send_messages.py  resetting_send_accounts_task.py
vk_parser/utils/: filters.py  http.py  parse.py  parsers.py  scheduler.py
(+48 files in other folders)
